k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-starter-kit
  labels:
    app.kubernetes.io/part-of: devops-starter-kit
