k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: devops-starter-kit-service
  namespace: devops-starter-kit

  labels:
    app.kubernetes.io/name: devops-starter-kit-app

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: devops-starter-kit-app

  ports:
    - name: http
      port: 80
      targetPort: http
